简化内容，更新说明

--- a/docs/01_案例/05_代码高亮.md
+++ b/docs/01_案例/05_代码高亮.md
@@ -1,4 +1,4 @@
-Highlight.js highlights syntax in code examples on blogs, forums and in fact on any web pages. It's very easy to use because it works automatically: finds blocks of code, detects a language, highlights it. [Learn more.](http://softwaremaniacs.org/soft/highlight/en/)
+Highlight.js 主要被用于博客,论坛及其他任何网页的代码着色. 因为它的自动化工作机制使其非常容易使用:发现代码块,检测语言然后高亮显示! [获取更多请参考.](http://softwaremaniacs.org/soft/highlight/en/)
 
 **Python**
 
